EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/Area_de_estudio__c.field-meta.xml
<CustomField>
    <fullName>Area_de_estudio__c</fullName>
    <label>Area de estudio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIENCIAS DE LA SALUD</fullName>
            </value>
            <value>
                <fullName>CIENCIAS SOCIALES Y HUMANIDADES</fullName>
            </value>
            <value>
                <fullName>INGENIERIA Y SISTEMAS</fullName>
            </value>
            <value>
                <fullName>NEGOCIOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>