EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/C_digo_de_Programa__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_Programa__c</fullName>
    <label>Código de Programa</label>
    <length>155</length>
    <type>Text</type>
</CustomField>