EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/Jornada__c.field-meta.xml
<CustomField>
    <fullName>Jornada__c</fullName>
    <label>Jornada</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EN LINEA</fullName>
            </value>
            <value>
                <fullName>FIN DE SEMANA</fullName>
            </value>
            <value>
                <fullName>MATUTINO</fullName>
            </value>
            <value>
                <fullName>NOCTURNO</fullName>
            </value>
            <value>
                <fullName>SABATINO</fullName>
            </value>
            <value>
                <fullName>VESPERTINO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>