EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/Modalidad__c.field-meta.xml
<CustomField>
    <fullName>Modalidad__c</fullName>
    <label>Modalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRESENCIAL</fullName>
            </value>
            <value>
                <fullName>VIRTUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>