EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/Nivel_de_estudio__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_estudio__c</fullName>
    <label>Nivel de estudio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepa UMM</fullName>
            </value>
            <value>
                <fullName>Profesional</fullName>
            </value>
            <value>
                <fullName>Maestria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>