EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/Nivel_de_Estudios__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Estudios__c</fullName>
    <label>Nivel de Estudios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guardería</fullName>
            </value>
            <value>
                <fullName>Kinder</fullName>
            </value>
            <value>
                <fullName>Primaria</fullName>
            </value>
            <value>
                <fullName>Secundaria</fullName>
            </value>
            <value>
                <fullName>Bachillerato Técnico</fullName>
            </value>
            <value>
                <fullName>Prepa</fullName>
                <label>Preparatoria</label>
            </value>
            <value>
                <fullName>Liceinciatura</fullName>
            </value>
            <value>
                <fullName>Maestría</fullName>
            </value>
            <value>
                <fullName>Doctorado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>