EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/Nombre_Corto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Corto__c</fullName>
    <label>Nombre Corto</label>
    <length>155</length>
    <type>Text</type>
</CustomField>