EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/Nombre_Largo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Largo__c</fullName>
    <label>Nombre Largo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>