EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/programa_activo__c.field-meta.xml
<CustomField>
    <fullName>programa_activo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Programa Activo</label>
    <type>Checkbox</type>
</CustomField>