EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/Programa_largo__c.field-meta.xml
<CustomField>
    <fullName>Programa_largo__c</fullName>
    <label>Programa largo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>