EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/Sede__c.field-meta.xml
<CustomField>
    <fullName>Sede__c</fullName>
    <label>Sede</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sede</valueSetName>
    </valueSet>
</CustomField>