EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Site</valueSetName>
    </valueSet>
</CustomField>