EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Account/recordTypes/Academic_Program.recordType-meta.xml
<RecordType>
    <fullName>Academic_Program</fullName>
    <active>true</active>
    <description>An Academic Program offered at the educational institution.</description>
    <label>Academic Program</label>
</RecordType>